fixed font and alignment on admin login

--- a/client/src/app/admin/login/login.component.css
+++ b/client/src/app/admin/login/login.component.css
@@ -4,4 +4,9 @@
   margin: 0 auto;
 }
 
+button {
+  margin-top: 20px;
+}
+
+
 
